--- a/yaml/cookbook/dc_cost_dataset_ele.yml
+++ b/yaml/cookbook/dc_cost_dataset_ele.yml
@@ -10,10 +10,14 @@ ele_daily_env:
   context_global_vars:
     # ele调价参数
     ele_adjust_price_param: 0.0000
+    ### 单成本异常阈值
+    order_cost_line: 50
 
   pre_load_dataset:
     - ele_worker_order_common_kpi_by_daily_t2
     - ele_dc_cost_t2
+
+  #### modified at 20201116
 
   play:
     #维度: 日期 站点 骑手 
@@ -23,8 +27,10 @@ ele_daily_env:
       cooks:
         - use_df:
             key: ele_dc_cost_t2
-            columns: [dc_id, 单成本]
+            columns: [dc_id, 单成本,工资单成本]
             index: dc_id
+        - df_select:
+            - '[单成本] < @order_cost_line'
         - stash_push_df: []
 
         - use_df:
@@ -39,7 +45,7 @@ ele_daily_env:
             drop_stash: true
         - df_reset_index: []
         - df_eval:
-            - '[商圈骑手成本] = [单成本] * [完成单量]'
+            - '[商圈骑手成本] = [工资单成本] * [完成单量]'
         - set_meta_month_column:
             - month
 
