--- a/yaml/cookbook/dc_order_cost_actual_mt_ele.yml
+++ b/yaml/cookbook/dc_order_cost_actual_mt_ele.yml
@@ -5,7 +5,6 @@ mt_ele_daily_env:
     play_on_dask_cluster: true
     dask_client_set_as_default: true
     cluster_client_address: tcp://172.31.54.193:8786
-  pre_load_dataset:
 
   play:
     # 计算美团当月单均成本
@@ -16,7 +15,7 @@ mt_ele_daily_env:
         - fetch_dataset:
             dataset_type_code: cost_revenue_business_dc
             dataset_cate: std
-            columns: [dc_id,city_code,supplier_id,platform_code, assets_income, settlement_order_quantity_first]
+            columns: [dc_id,city_code,supplier_id,platform_code, assets_income, settlement_order_quantity_first,knight_wages]
             ignore_null_error: true
             empty_df_record:
               dc_id: '-'
@@ -25,29 +24,37 @@ mt_ele_daily_env:
               platform_code: '-'
               assets_income: 0
               settlement_order_quantity_first: 0
+              knight_wages: 0
             rename:
               assets_income: 骑士成本
               settlement_order_quantity_first: 结算单量
+              knight_wages: 骑士工资
 
         - df_select:
             - 'platform_code == @p1'
             - p1: meituan
 
         - df_fillna:
-            columns: [骑士成本,结算单量]
+            columns: [骑士成本,结算单量,骑士工资]
             value: 0.0
         - run_py:
             - |
                 df = to_df(df)
                 df[u'单成本'] = 0
+                df[u'工资单成本'] = 0
                 df.loc[df.loc[:,u'结算单量'] > 0,u'单成本'] =  (df[u'骑士成本']/100)/df[u'结算单量']
+                df.loc[df.loc[:,u'结算单量'] > 0,u'工资单成本'] =  (df[u'骑士工资']/100)/df[u'结算单量']
                 result = df
         - set_meta_month_column:
             - month
+
+
         - fetch_cols:
-            columns: [dc_id,单成本,month,city_code,supplier_id]
+            columns: [dc_id,单成本,month,city_code,supplier_id,工资单成本]
+
 
     # 计算饿了么当月单均成本
+    ##### modified at 20201116
     - name: ele_dc_cost_t2_by_dc_month
       sync_result: true
       keep_result: true
@@ -55,7 +62,7 @@ mt_ele_daily_env:
         - fetch_dataset:
             dataset_type_code: cost_revenue_business_dc
             dataset_cate: std
-            columns: [dc_id, city_code,supplier_id,platform_code, assets_income, settlement_order_quantity_first]
+            columns: [dc_id, city_code,supplier_id,platform_code, assets_income, settlement_order_quantity_first,knight_wages]
             ignore_null_error: true
             empty_df_record:
               dc_id: '-'
@@ -64,27 +71,32 @@ mt_ele_daily_env:
               platform_code: '-'
               assets_income: 0
               settlement_order_quantity_first: 0
+              knight_wages: 0
             rename:
               assets_income: 骑士成本
               settlement_order_quantity_first: 结算单量
+              knight_wages: 骑士工资
 
         - df_select:
             - 'platform_code == @p1'
             - p1: elem
 
         - df_fillna:
-            columns: [骑士成本,结算单量]
+            columns: [骑士成本,结算单量,骑士工资]
             value: 0.0
         - run_py:
             - |
                 df = to_df(df)
                 df[u'单成本'] = 0
+                df[u'工资单成本'] = 0
                 df.loc[df.loc[:,u'结算单量'] > 0,u'单成本'] =  (df[u'骑士成本']/100)/df[u'结算单量']
+                df.loc[df.loc[:,u'结算单量'] > 0,u'工资单成本'] =  (df[u'骑士工资']/100)/df[u'结算单量']
                 result = df
         - set_meta_month_column:
             - month
+
         - fetch_cols:
-            columns: [dc_id,单成本,month,city_code,supplier_id]
+            columns: [dc_id,单成本,month,city_code,supplier_id,工资单成本]
 
     # 变换表名称，供下个指标调用
     - name: mt_dc_cost_t2
